--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --mode production",
     "preview": "vite preview"
   },
   "dependencies": {
     "vue": "^3.4.0",
     "vue-router": "^4.2.0",
-    "lucide-vue-next": "^0.358.0"
+    "lucide-vue-next": "^0.358.0",
+    "@rollup/rollup-linux-x64-gnu": "4.9.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
@@ -19,5 +20,8 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.0"
   }
 } 
