--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "vue": "^3.4.0",
     "vue-router": "^4.2.0",
     "lucide-vue-next": "^0.358.0",
-    "@rollup/rollup-linux-x64-gnu": "4.9.0"
+    "@rollup/rollup-linux-x64-gnu": "4.9.0",
+    "@esbuild/linux-x64": "0.19.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
@@ -22,6 +23,7 @@
     "vite": "^5.0.0"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.9.0"
+    "@rollup/rollup-linux-x64-gnu": "4.9.0",
+    "@esbuild/linux-x64": "0.19.8"
   }
 } 
