Fix: Optimize serverless function size

--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,10 @@
     },
     {
       "src": "server/api/index.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "10mb"
+      }
     }
   ],
   "routes": [
