--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "build": "cd client && npm install && npm run build",
-    "dev": "cd client && npm run dev"
+    "dev": "cd client && npm run dev",
+    "preview": "cd client && npm run preview"
   }
 } 
