--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,11 +2,14 @@ name = "report-analyzer"
 compatibility_date = "2024-01-01"
 
 [build]
-command = "cd client && npm install && npm run build"
+command = "npm run build"
 output_dir = "client/dist"
 
 [site]
 bucket = "client/dist"
+
+[build.environment]
+NODE_VERSION = "18"
 
 [env.production]
 vars = { ENVIRONMENT = "production" } 
