--- a/client/package.json
+++ b/client/package.json
@@ -11,19 +11,15 @@
   "dependencies": {
     "vue": "^3.4.0",
     "vue-router": "^4.2.0",
-    "lucide-vue-next": "^0.358.0",
-    "@rollup/rollup-linux-x64-gnu": "4.9.0",
-    "@esbuild/linux-x64": "0.19.8"
+    "lucide-vue-next": "^0.358.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.0.0"
-  },
-  "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.9.0",
-    "@esbuild/linux-x64": "0.19.8"
+    "vite": "^5.0.0",
+    "@esbuild/linux-x64": "0.19.8",
+    "esbuild": "^0.19.8"
   }
 } 
